--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,13 +13,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher"
         android:supportsRtl="true"
-<<<<<<< Updated upstream
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        >
-        <activity android:name=".ConfirmarActivity"></activity>
-=======
-        android:theme="@style/AppTheme">
+        android:usesCleartextTraffic="true">
         <activity
             android:name=".ReporteActivity"
             android:label="@string/title_activity_reporte"
@@ -29,7 +24,6 @@
             android:label="@string/title_activity_main"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".ConfirmarActivity" />
->>>>>>> Stashed changes
         <activity android:name=".SignUpActivity" />
         <activity
             android:name=".LoginActivity"
